@startuml

title __INTERFACEBAUMASCHINE's Class Diagram__\n

  namespace baumaschinen {
    abstract class baumaschinen.Bagger {
    }
  }
  

  namespace baumaschinen {
    abstract class baumaschinen.Baumaschine {
    }
  }
  

  namespace baumaschinen {
    interface baumaschinen.Fahrbar {
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.Foerderband {
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.Kipplaster {
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.SchaufelradBagger {
    }
  }
  

  namespace baumaschinen {
    class baumaschinen.SeilBagger {
    }
  }
  

  namespace baumaschinen {
    abstract class baumaschinen.Transportgeraet {
    }
  }
  

  namespace test {
    class test.Main {
    }
  }
  

  baumaschinen.Bagger -up-|> baumaschinen.Baumaschine
  baumaschinen.Foerderband -up-|> baumaschinen.Transportgeraet
  baumaschinen.Kipplaster .up.|> baumaschinen.Fahrbar
  baumaschinen.Kipplaster -up-|> baumaschinen.Transportgeraet
  baumaschinen.SchaufelradBagger .up.|> baumaschinen.Fahrbar
  baumaschinen.SchaufelradBagger -up-|> baumaschinen.Bagger
  baumaschinen.SeilBagger .up.|> baumaschinen.Fahrbar
  baumaschinen.SeilBagger -up-|> baumaschinen.Bagger
  baumaschinen.Transportgeraet -up-|> baumaschinen.Baumaschine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
